# QtCpp-04-ScreenRecorder

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h
